[tool.poetry]
name = "dataapi"
version = "0.1.0"
description = ""
authors = ["Lars Viklund <zao@zao.se>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
uvicorn = {extras = ["standard"], version = "^0.24.0.post1"}
fastapi = "^0.104.1"
atomicwrites = "^1.4.1"
hypercorn = "^0.15.0"
pydantic-settings = "^2.0.3"
websockets = "^12.0"
aiofile = "^3.8.8"
zstandard = "^0.22.0"
psycopg = {extras = ["binary", "pool"], version = "^3.1.13"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
